# mazocarta

./: .gitignore  AGENTS.md  CNAME  Cargo.toml  DESIGN.md  Makefile  README.md  RELEASE.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  playwright.config.mjs
.cargo/: config.toml
.github/: dependabot.yml
.github/actions/install-resvg/: action.yml  install-resvg.sh
.github/workflows/: ci.yml  pages.yml  release.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/mazocarta/android/: MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
scripts/: android-env.sh  android-gradle.sh  android-sync-assets.sh  build-web.sh  package-pages.sh  publish-check.sh  render-android-icons.sh  render-combat-icons.sh  render-enemy-previews.py  render-pwa-icons.sh  run-gitleaks.sh  setup-android-sdk.sh  soak-multiplayer-2p.mjs  vendor-qr-libs.mjs
src/: app.rs  autoplay.rs  combat.rs  content.rs  dungeon.rs  lib.rs  pairing.rs  party.rs  rng.rs  run_logic.rs  save.rs  session.rs
src/content/: cards.rs
src/sim/: mod.rs
tests/e2e/: host-first-card.spec.mjs  multiplayer-lan-session.spec.mjs
web/: e2e-harness.js  index.html  index.js  manifest.webmanifest  multiplayer.js  styles.css  sw.js  ui-kit.css  ui-kit.js  ui-overlays.css
