[package]
name = "mazocarta"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[dependencies]
flate2 = { version = "1.1", default-features = false, features = ["rust_backend"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
e2e = []

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
